# kaggle_JaneStreet

./: .env  README.md  pyproject.toml
docker/RTX3080/: .env  docker-compose.yaml
docker/no-gpu/: docker-compose.yaml
src/: EDA.ipynb
src/Dehttah/: dataloader.py
